syntax = "proto3";

package yandex.spqr;

option go_package = "yandex/spqr/proto";
  
service KeyRangeService {
  rpc ListKeyRange (ListKeyRangeRequest) returns (KeyRangeReply) {}
  rpc LockKeyRange (LockKeyRangeRequest) returns (KeyRangeReply) {}
  rpc UnlockKeyRange (UnlockKeyRangeRequest) returns (KeyRangeReply) {}
  rpc SplitKeyRange (SplitKeyRangeRequest) returns (SplitKeyRangeReply) {}
}

enum KeyRangeStatus {
  LOCKED = 0;
  AVAILABLE = 1;
}

// key range is mapped to shard
message KeyRange {

  bytes lower_bound = 1;
  bytes upper_bound = 2;

  string krid = 3;
  string shardId = 4;
}

message ListKeyRangeRequest {
}

message SplitKeyRangeRequest {
  string krid = 1;
  bytes bound = 2;
}

message SplitKeyRangeReply {
  string splitted_krid = 1;
}

message LockKeyRangeRequest {
  string krid = 3;
}

message UnlockKeyRangeRequest {
  KeyRangeStatus status = 1;
}

message KeyRangeReply {
	repeated KeyRange key_ranges = 1;
}

